puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Offers.Manager/content/Views/Offers/Manager.cshtml.pp
@{
    ViewBag.Title = "Index";
    ViewBag.SitemapProvider = "Modules";
    Layout = "~/Views/Shared/_Folder.cshtml";
}

<div class="alert alert-success">
    Customer Created
</div>

<table class="table table-bordered">
    <thead>
        <tr>
            <th>Customer Name</th>
            <th>Purchase Amount</th>
            <th>Purchase Date</th>
            <th>Status</th>
            <th></th>
        </tr>
    </thead>
    <tr>
        <td>Walter White</td>
        <td>$5.12</td>
        <td>September 4, 2012</td>
        <td><a href="#">Purchased</a></td>
        <td><a href="@Url.Action("Record", "Orders")">More Information</a></td>
    </tr>
</table>